bitstruct/tests/ui/bits_larger_than_raw.rs
use bitstruct::bitstruct;

bitstruct! {
    struct Reg(u32) {
        field1: u64 = 0 .. 33;
    }
}

fn main() {}